--- a/public/stylesheets/navbar.css
+++ b/public/stylesheets/navbar.css
@@ -1,6 +1,6 @@
 .navbar {
   background: #0e7dd5;
-  height: 100vh;
+  height: auto;
   width: 275px;
 }
 
